# purple_prototype

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  LICENSE.txt  README.md  run_debug.sh  run_release.sh  vcvars_proxy.py
.github/: FUNDING.yml
src/account/: Cargo.toml
src/account/src/: address.rs  balance.rs  balance_map.rs  lib.rs  multi_sig.rs  multi_sig_address.rs  share_map.rs  shares.rs  sig_extern.rs  signature.rs
src/account/src/account/: contract.rs  mod.rs  multi_sig.rs  normal.rs  shareholders.rs
src/account/src/addresses/: contract.rs  mod.rs  multi_sig.rs  multi_sig_address.rs  normal.rs  normal_address.rs  shareholders.rs  shareholders_address.rs
src/account/src/state/: contract.rs  mod.rs  multi_sig.rs  normal.rs  shareholders.rs
src/chain/: Cargo.toml
src/chain/bench/: chain_bench.rs
src/chain/src/: block.rs  block_iterator.rs  chain.rs  easy_block.rs  easy_chain.rs  hard_block.rs  hard_chain.rs  init.rs  lib.rs  orphan_state.rs  orphan_type.rs  pending_state.rs  pow_chain_state.rs  test_helpers.rs  types.rs  validation_status.rs
src/chain/src/easy_chain/: block.rs  chain.rs
src/chain/src/fsm/: branch_fsm.rs  mod.rs
src/chain/src/hard_chain/: block.rs  chain.rs  mod.rs  state.rs
src/chain/src/iterators/: easy.rs  hard.rs  mod.rs
src/chain/src/pow_chain/: block.rs  branch_validator.rs  chain.rs  chain_state.rs  checkpoint_block.rs  epoch_info.rs  mod.rs  transaction_block.rs  validator_entry.rs
src/chain/src/state_chain/: block.rs  chain.rs  mod.rs  state.rs
src/chain/src/test/: .gitignore
src/consensus/: Cargo.toml
src/consensus/src/: candidate.rs  candidate_set.rs  causal_graph.rs  consensus_machine.rs  error.rs  lib.rs  macros.rs  parameters.rs  pool_state.rs  validation.rs  validator_state.rs
src/crypto/: Cargo.toml  build.rs
src/crypto/bench/: bls_benchmark.rs
src/crypto/c_src/: CMakeLists.txt
src/crypto/src/: blake_hasher.rs  hash.rs  lib.rs  node_id.rs  short_hash.rs  signature.rs
src/crypto/src/bls/: mod.rs  pkey.rs  signature.rs  skey.rs
src/events/: Cargo.toml
src/events/bench/: events_benchmark.rs
src/events/src/: heartbeat.rs  join.rs  leave.rs  lib.rs  macros.rs
src/mempool/: Cargo.toml
src/mempool/src/: error.rs  lib.rs  mempool.rs
src/miner/: Cargo.toml  build.rs
src/miner/cuckoo_src/: CMakeLists.txt
src/miner/cuckoo_src/cmake/: find_cuda.cmake
src/miner/src/: error.rs  ffi.rs  lib.rs  macros.rs  miner.rs  plugin.rs  plugin_config.rs  plugin_type.rs  proof.rs  shared_data.rs  solver_instance.rs  verify.rs
src/miner/src/pow/: common.rs  cuckaroo.rs  error.rs  mod.rs  pow_ctx.rs  proof.rs  siphash.rs
src/network/: Cargo.toml
src/network/bench/: packets_bench.rs
src/network/src/: bootstrap.rs  client_request.rs  common.rs  connection.rs  error.rs  handlers.rs  header.rs  interface.rs  jobs.rs  lib.rs  listener.rs  mock.rs  network.rs  node_id.rs  packet.rs  peer.rs  pool_network.rs  pool_peer.rs  priority.rs  util.rs
src/network/src/bootstrap/: cache.rs  entry.rs  mod.rs
src/network/src/downloader/: download.rs  download_info.rs  download_state.rs  error.rs  mod.rs  piece.rs  piece_info.rs  sub_piece.rs  sub_piece_info.rs  sub_pieces.rs
src/network/src/packets/: accept_connection.rs  announce_block.rs  announce_checkpoint.rs  announce_tx.rs  announce_tx_block.rs  connect.rs  connect_pool.rs  forward_block.rs  forward_checkpoint_header.rs  forward_event.rs  forward_tx_block_header.rs  mod.rs  ping.rs  pong.rs  reject_block.rs  reject_piece_info.rs  reject_sub_piece.rs  reject_tx.rs  request_block.rs  request_blocks.rs  request_connection.rs  request_missing_txs.rs  request_peers.rs  request_piece_info.rs  request_sub_piece.rs  request_sub_pieces_info.rs  request_tx.rs  send_blocks.rs  send_missing_txs.rs  send_peers.rs  send_piece_info.rs  send_sub_piece.rs  send_sub_pieces_info.rs  send_tx.rs
src/network/src/protocol_flow/: mod.rs
src/network/src/protocol_flow/block_propagation/: inbound.rs  outbound.rs  receiver.rs  receiver_state.rs  sender.rs  sender_state.rs  wrapper.rs
src/network/src/protocol_flow/ping_pong/: mod.rs  receiver.rs  receiver_state.rs  sender.rs  sender_state.rs  wrapper.rs
src/network/src/protocol_flow/request_blocks/: receiver.rs  receiver_state.rs  sender.rs  sender_state.rs  wrapper.rs
src/network/src/protocol_flow/request_peers/: mod.rs  receiver.rs  receiver_state.rs  sender.rs  sender_state.rs  wrapper.rs
src/network/src/protocol_flow/transaction_propagation/: inbound.rs  mod.rs  outbound.rs  receiver.rs  receiver_state.rs  sender.rs  sender_state.rs  wrapper.rs
src/network/src/validation/: fsm.rs  mod.rs  pool_validator.rs  receiver.rs  sender.rs  validator.rs
src/persistence/: Cargo.toml
src/persistence/bench/: db_bench.rs
src/persistence/src/: hasher.rs  init.rs  lib.rs  node_codec.rs  persistent_db.rs  state_registry.rs
src/purple_vm/: Cargo.toml
src/purple_vm/bench/: vm_bench.rs
src/purple_vm/cxx_src/: vm_api.h
src/purple_vm/src/: address.rs  code.rs  error.rs  frame.rs  gas.rs  instruction_set.rs  lib.rs  module.rs  return_address.rs  stack.rs  state.rs  value.rs  virtual_machine.rs
src/purple_vm/src/code/: function.rs  import.rs  mod.rs  transition.rs  validator.rs
src/purple_vm/src/primitives/: control_flow.rs  mod.rs  type.rs  value.rs
src/transactions/: Cargo.toml
src/transactions/src/: burn.rs  call.rs  change_minter.rs  create_currency.rs  create_mintable.rs  create_unique.rs  genesis.rs  helpers.rs  issue_shares.rs  lib.rs  macros.rs  mint.rs  open.rs  open_contract.rs  open_multi_sig.rs  open_shares.rs  pay.rs  receive.rs  return_tx.rs  send.rs  traits.rs  transaction.rs
src/util/bloom/: Cargo.toml
src/util/bloom/src/: bloom_filter.rs  error.rs  lib.rs
src/util/purple_iblt/: Cargo.toml
src/util/purple_iblt/src/: error.rs  iblt.rs  lib.rs
src/util/test-helpers/: Cargo.toml
src/util/test-helpers/src/: lib.rs
transactions/: Cargo.toml
transactions/src/: call.rs  genesis.rs  lib.rs  open.rs  open_contract.rs  receive.rs  return_tx.rs  send.rs  traits.rs
(+89 files in other folders)
