[package]
name = "purple"
version = "0.0.1"
license = "GPL-3.0"
publish = false

[workspace]

[dependencies]
clap = "2.32.0"
unwrap = "1.2.0"
hex = "0.3.2"
itc = "0.1.2"
log = "0.4.0"
env_logger = "0.6.0"
parking_lot = "0.7.1"
tokio = "0.1.11"
futures = "0.1.25"
dirs = "1.0.4"
elastic-array = "0.10.0"
jsonrpc-core = "9.0.0"
jsonrpc-macros = "9.0.0"
hashdb = "0.3.0"
rocksdb = "0.12.2"
account = { path = "src/account" }
purple_vm = { path = "src/purple_vm" }
crypto = { path = "src/crypto" } 
jump = { path = "src/jump" }
events = { path = "src/events" }
consensus = { path = "src/consensus" }
persistence = { path = "src/persistence" }
network = { path = "src/network" }
transactions = { path = "src/transactions" }
common = { path = "src/common" }
chain = { path = "src/chain" }
miner = { path = "src/miner" }
mimalloc = "0.1.1"

[[bin]]
path = "src/purple/main.rs"
name = "purple"

[profile.release]
lto = true

[features]
default = []
miner-cpu-avx = ["miner/cpu", "miner/avx"]
miner-cpu = ["miner/cpu"]
miner-gpu = ["miner/gpu"]