[package]
name = "purple"
version = "0.0.1"
license = "GPL-3.0"
publish = false

[workspace]
members = [
    "src/account",
    "src/causality",
    "src/chain",
    "src/consensus",
    "src/crypto",
    "src/events",
    "src/jump",
    "src/miner",
    "src/network",
    "src/persistence",
    "src/purple_vm",
    "src/transactions",
]

[dependencies]
clap = "2.32.0"
unwrap = "1.2.0"
hex = "0.3.2"
itc = "0.1.2"
lazy_static = "1.2.0"
log = "0.4.0"
slog = "2.5.2"
slog-stdlog = "4.0.0"
slog-envlogger = "2.2.0"
slog-scope = "4"
slog-term = "2.4.1"
slog-async = "2.3.0"
parking_lot = "0.7.1"
tokio = "0.1.11"
futures = "0.1.25"
dirs = "1.0.4"
elastic-array = "0.10.0"
jsonrpc-core = "9.0.0"
jsonrpc-macros = "9.0.0"
hashdb = "0.3.0"
rocksdb = "0.12.2"
account = { path = "src/account" }
purple_vm = { path = "src/purple_vm" }
crypto = { path = "src/crypto" } 
jump = { path = "src/jump" }
events = { path = "src/events" }
consensus = { path = "src/consensus" }
persistence = { path = "src/persistence" }
network = { path = "src/network" }
transactions = { path = "src/transactions" }
chain = { path = "src/chain" }
miner = { path = "src/miner" }
mimalloc = "0.1.9"

[dev-dependencies.chain]
path = "src/chain"
features = ["test"]

[dev-dependencies.persistence]
path = "src/persistence"
features = ["test"]

[[bin]]
path = "src/purple/main.rs"
name = "purple"

[profile.release]
lto = "thin"

[features]
default = []
miner-cpu-avx = ["miner/cpu", "miner/avx", "network/miner"]
miner-cpu = ["miner/cpu", "network/miner"]
miner-gpu = ["miner/gpu", "network/miner"]

