[package]
name = "purple"
version = "0.0.1"
license = "GPL-3.0"
publish = false
edition = "2018"

[workspace]
members = [
    "src/account",
    "src/chain",
    "src/crypto",
    "src/jump",
    "src/miner",
    "src/network",
    "src/persistence",
    "src/purple_vm",
    "src/transactions",
    "src/mempool",
]

[dependencies]
clap = "2.32.0"
unwrap = "1.2.0"
hex = "0.3.2"
lazy_static = "1.4.0"
log = "0.4.0"
slog = "2.5.2"
slog-stdlog = "4.0.0"
slog-envlogger = "2.2.0"
slog-scope = "4"
slog-term = "2.4.1"
slog-async = "2.3.0"
parking_lot = "0.7.1"
flume = "0.7.1"
tokio = { version = "0.2.11", features = ["full"] } 
dirs = "1.0.4"
elastic-array = "0.10.0"
jsonrpc-core = "9.0.0"
jsonrpc-macros = "9.0.0"
triomphe = { git = "https://github.com/octavonce/triomphe" }
hashdb = "0.3.0"
rocksdb = "0.13.0"
cfg-if = "0.1.10"
account = { path = "src/account" }
purple_vm = { path = "src/purple_vm" }
crypto = { path = "src/crypto" } 
jump = { path = "src/jump" }
persistence = { path = "src/persistence" }
network = { path = "src/network" }
transactions = { path = "src/transactions" }
chain = { path = "src/chain" }
miner = { path = "src/miner" }
mempool = { path = "src/mempool" }
reqwest = { version = "0.10.1", features = ["cookies", "json"] }
mimalloc = { version = "0.1.18", default-features = false }

['cfg(test)'.chain]
path = "src/chain"
features = ["test"]

['cfg(test)'.persistence]
path = "src/persistence"
features = ["test"]

[[bin]]
path = "src/purple/main.rs"
name = "purple"

[profile.release]
lto = "thin"
codegen-units=1
panic = "abort"

[features]
default = ["mimalloc-allocator"]
mimalloc-allocator = []
miner-cpu-avx = ["miner/cpu", "miner/avx", "network/miner"]
miner-cpu = ["miner/cpu", "network/miner"]
miner-gpu = ["miner/gpu", "network/miner"]
miner-test-mode = ["miner/cpu", "miner/test", "network/miner"]

