[package]
name = "transactions"
version = "0.1.0"
authors = []

[dependencies]
serde = "1.0.59"
serde_derive = "1.0.59"
rmp-serde = "0.13.7"
itc = { path = "../itc" }
transaction_derives = { path = "../transaction_derives" }
purple_crypto = { path = "../purple_crypto" }
account = { path = "../account" }