[package]
name = "account"
version = "0.1.0"
authors = []
publish = false

[dependencies]
serde = "1.0.59"
serde_derive = "1.0.59"
rlp = "0.3.0"
regex = "1"
hex = "0.3.2"
hashbrown = { git = "https://github.com/octavonce/hashbrown", features = ["serde"] }
lazy_static = "1.2.0"
byteorder = "1.2.7"
rust_decimal = "0.9.0"
crypto = { path = "../crypto" }
quickcheck = "0.7.2"
rand = "0.6.0"