[package]
name = "chain"
version = "0.1.0"
authors = ["Octavian Oncescu <octavonce@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
elastic-array = "0.10.0"
byteorder = "1.2.7"
lazy_static = "1.0.0"
lru = "0.1.13"
rlp = "0.3.0"
parking_lot = "0.6"
hex = "0.3.2"
crypto = { path = "../crypto" }
persistence = { path = "../persistence" }
bin-tools = { path = "../util/bin-tools/" }
hashdb = "0.3.0"
hashbrown = { git = "https://github.com/octavonce/hashbrown", features = ["serde", "rayon"] }

[dev-dependencies]
rand = "^0.6.0"
quickcheck = "0.7.2"
test-helpers = { path = "../util/test-helpers" }