[package]
name = "chain"
version = "0.1.0"
authors = ["Octavian Oncescu <octavonce@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
elastic-array = "0.10.0"
byteorder = "1.2.7"
lazy_static = "1.0.0"
lru = "0.1.13"
rlp = "0.3.0"
parking_lot = "0.7.1"
hex = "0.3.2"
log = "0.4.0"
patricia-trie = "0.3.0"
account = { path = "../account" }
crypto = { path = "../crypto" }
miner = { path = "../miner" }
persistence = { path = "../persistence" }
bin-tools = { path = "../util/bin-tools/" }
hashdb = "0.3.0"
rand = "^0.6.0"
quickcheck = "0.7.2"
hashbrown = { git = "https://github.com/octavonce/hashbrown", features = ["serde", "rayon"] }

[dev-dependencies]
graphlib = { version = "0.5.3", features = ["dot"] }
rayon = "1.2.0"
test-helpers = { path = "../util/test-helpers" }

[dev-dependencies.miner]
features = ["test"]
path = "../miner" 

[features]
test = []