[package]
name = "consensus"
version = "0.1.0"
authors = ["Octavian Oncescu <octavonce@gmail.com>"]
edition = "2018"

[dependencies]
petgraph = "0.4.13"
parking_lot = "0.6"
events = { path = "../events" }
network = { path = "../network" }
causality = { path = "../causality" }

[dev-dependencies]
rand = "0.6.0"
crypto = { path = "../crypto" }