[package]
name = "consensus"
version = "0.1.0"
authors = ["Octavian Oncescu <octavonce@gmail.com>"]
edition = "2018"

[dependencies]
parking_lot = "0.6"
graphlib = "0.2.0"
events = { path = "../events" }
network = { path = "../network" }
causality = { path = "../causality" }
recursive = { path = "../util/recursive" }
hashbrown = { git = "https://github.com/octavonce/hashbrown", features = ["serde", "rayon"] }

[dev-dependencies]
rand = "0.6.0"
crypto = { path = "../crypto" }