[package]
name = "crypto"
version = "0.1.0"
authors = []
publish = false

[dependencies]
blake2 = "0.8.0"
hex = "0.3.2"
byteorder = "1.2.7"
crc32fast = "1.2.0"
rlp = "0.3.0"
digest = "0.8.0"
merkle_light = "0.3.1"
rust_sodium = { git = "https://github.com/octavonce/rust_sodium" }
rust-base58 = "0.0.4"
serde = "1.0.59"
serde_derive = "1.0.59"
quickcheck = "0.7.2"
hashdb = "0.3.0"
rand = "0.6.0"

[dependencies.ed25519-dalek]
version = "0.9.1"
features = ["serde"]