[package]
name = "crypto"
version = "0.1.0"
edition = "2018"
authors = []
publish = false

[dependencies]
blake3 = "0.1.0"
hex = "0.3.2"
byteorder = "1.2.7"
crc32fast = { version = "1.2.0", features = ["nightly"] }
rlp = "0.3.0"
merkle_light = "0.3.1"
rust_sodium = { git = "https://github.com/octavonce/rust_sodium" }
rust-base58 = "0.0.4"
serde = "1.0.104"
serde_derive = "1.0.104"
quickcheck = "0.7.2"
hashdb = "0.3.0"
rand = "0.6.0"
bin-tools = { path = "../util/bin-tools" }