[package]
name = "events"
version = "0.1.0"
authors = []
publish = false

[dependencies]
serde = "1.0.59"
serde_derive = "1.0.59"
byteorder = "1.2.7"
rlp = "0.3.0"
rayon = "1.0.3"
parking_lot = "0.6.4"
merkle_light = "0.3.1"
bitvec = "0.9.0"
account = { path = "../account" }
causality = { path = "../causality" }
network = { path = "../network" }
crypto = { path = "../crypto" }
transactions = { path = "../transactions" }
persistence = { path = "../persistence" }
patricia-trie = "0.3.0"

[dev-dependencies]
quickcheck = "0.7.2"
criterion = "0.2.1"
test-helpers = { path = "../util/test-helpers" }

[[bench]]
name = "events_benchmark"
path = "./bench/events_benchmark.rs"
harness = false