[package]
name = "events"
version = "0.1.0"
authors = []
publish = false

[dependencies]
serde = "1.0.59"
serde_derive = "1.0.59"
byteorder = "1.2.7"
rlp = "0.3.0"
rayon = "1.2.0"
parking_lot = "0.7.1"
merkle_light = "0.3.1"
bitvec = "0.9.0"
account = { path = "../account" }
causality = { path = "../causality" }
crypto = { path = "../crypto" }
transactions = { path = "../transactions" }
persistence = { path = "../persistence" }
patricia-trie = "0.3.0"
rand = "^0.6.0"
quickcheck = "0.7.2"

[dev-dependencies]
mimalloc = "0.1.3"
criterion = "0.2.1"
test-helpers = { path = "../util/test-helpers" }

[[bench]]
name = "events_benchmark"
path = "./bench/events_benchmark.rs"
harness = false