[package]
name = "mempool"
version = "0.1.0"
authors = ["Octavian Oncescu <octavonce@gmail.com>"]
edition = "2018"

[dependencies]
parking_lot = "0.7.1"
hashbrown = { git = "https://github.com/octavonce/hashbrown", features = ["serde", "rayon"] }
transactions = { path = "../transactions" }
crypto = { path = "../crypto" }