[package]
name = "miner"
version = "0.1.0"
authors = ["Octavian Oncescu <octavonce@gmail.com>"]
edition = "2018"

[dependencies]
libloading = "0.5"
parking_lot = "0.7.1"
blake2-rfc = "0.2.18"
bitvec = "0.9.0"
byteorder = "1.2.7"
enum-repr = "0.2.2"
cfg-if = "0.1"
libc = "0.2.55"
rand = "0.6.0"
failure = "0.1.5"
lazy_static = "1.2.0"
serde = "1.0.91"
num = "0.2"
bin-tools = { path = "../util/bin-tools" }
crypto = { path = "../crypto" }

[dev-dependencies]
quickcheck = "0.7.2"

[build-dependencies]
cmake = "0.1.24"
fs_extra = "1.1.0"

[features]
default = []
test = []
avx = []
gpu = []
cpu = []