[package]
name = "network"
version = "0.1.0"
authors = []
edition = "2018"
publish = false

[dependencies]
serde = "1.0.59"
serde_derive = "1.0.59"
rand = "0.6.0"
byteorder = "1.2.7"
chrono = "0.4.6"
tokio = "0.1.11"
tokio-timer = "0.2.8"
tokio-io-timeout = "0.3.1"
futures = "0.1.25"
rlp = "0.3.0"
log = "0.4.0"
crossbeam-channel = "0.4.0"
parking_lot = "0.7.1"
hex = "0.3.2"
hashdb = "0.3.0"
chain = { path = "../chain" }
crypto = { path = "../crypto" }
persistence = { path = "../persistence" }
quickcheck = "0.7.2"
hashbrown = { git = "https://github.com/octavonce/hashbrown", features = ["rayon", "serde"] }
bin-tools = { path = "../util/bin-tools/" }

[dev-dependencies.chain]
path = "../chain"
features = ["test"]

[dev-dependencies]
tempdir = "0.3.7"
rayon = "1.2.0"
timer = "0.2.0"
test-helpers = { path = "../util/test-helpers" }

[features]
miner = []