[package]
name = "network"
version = "0.1.0"
authors = []
edition = "2018"
publish = false

[dependencies]
serde = "1.0.104"
serde_derive = "1.0.104"
rand = "0.6.0"
byteorder = "1.2.7"
lazy_static = "1.4.0"
bytes = "0.5.4"
futures = "0.3.4"
chrono = "0.4.6"
tokio = { version = "0.2.14", features = ["full"] } 
tokio-io-timeout = "0.4.0"
futures-io = "0.3.4"
futures-util = "0.3.4"
yamux = "0.4.5"
dashmap = "3.2.1"
rlp = "0.3.0"
log = "0.4.0"
flume = "0.7.1"
parking_lot = "0.7.1"
triomphe = { git = "https://github.com/octavonce/triomphe" }
hex = "0.3.2"
async-trait = "0.1.29"
hashdb = "0.3.0"
chain = { path = "../chain" }
crypto = { path = "../crypto" }
transactions = { path = "../transactions" }
mempool = { path = "../mempool" }
persistence = { path = "../persistence" }
quickcheck = "0.7.2"
hashbrown = { git = "https://github.com/octavonce/hashbrown", features = ["rayon", "serde"] }
bin-tools = { path = "../util/bin-tools/" }
constants = { path = "../constants" } 

[dev-dependencies.chain]
path = "../chain"
features = ["test"]

[dev-dependencies.transactions]
path = "../transactions"
features = ["test"]

[dev-dependencies]
tempdir = "0.3.7"
rayon = "1.2.0"
timer = "0.2.0"
criterion = "0.2.1"
crossbeam-channel = "0.4.4"
test-helpers = { path = "../util/test-helpers" }

[[bench]]
name = "packets_benchmark"
path = "bench/packets_bench.rs"
harness = false

[features]
miner = []