[package]
name = "persistence"
version = "0.1.0"
authors = ["octavonce <octavonce@gmail.com>"]
publish = false

[dependencies]
hashdb = "0.3.0"
patricia-trie = "0.3.0"
elastic-array = "0.10.0"
rlp = "0.3.0"
parking_lot = "0.7.1"
rocksdb = "0.12.2"
hashbrown = { git = "https://github.com/octavonce/hashbrown", features = ["serde", "rayon"] }
crypto = { path = "../crypto" }
log = "0.4.0"

[dev-dependencies]
tempdir = "0.3.7"