[package]
name = "persistence"
version = "0.1.0"
authors = ["octavonce <octavonce@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
hashdb = "0.3.0"
patricia-trie = "0.3.0"
elastic-array = "0.10.0"
triomphe = { git = "https://github.com/octavonce/triomphe" }
rlp = "0.3.0"
parking_lot = "0.7.1"
rocksdb = "0.13.0"
num_cpus = "1.10.1"
lazy_static = "1.4.0"
hashbrown = { git = "https://github.com/octavonce/hashbrown", features = ["serde", "rayon"] }
crypto = { path = "../crypto" }
log = "0.4.0"
ansi_term = "0.9"
byteorder = "1.2.7"
cfg-if="0.1.9"
bin-tools = { path = "../util/bin-tools" }

[dev-dependencies]
hex = "0.3.2"
mimalloc = "0.1.12"
criterion = "0.2.1"
rand = "^0.6.0"
tempdir = "0.3.7"

[[bench]]
name = "db_benchmark"
path = "bench/db_bench.rs"
harness = false

[features]
test = []