[package]
name = "purple_vm"
version = "0.1.0"
edition = "2018"
authors = ["Octavian Oncescu <octavonce@gmail.com>"]
publish = false

[dependencies]
serde = "1.0.104"
serde_derive = "1.0.104"
lazy_static = "1.4.0"
regex = "1"
enum-repr = "0.2.2"
byteorder = "1.2.7"
bitvec = "0.9.0"
rust_decimal = "0.9.0"
rand = "0.6.0"
quickcheck = "0.7.2"
crypto = { path = "../crypto" }
bin-tools = { path = "../util/bin-tools/" }
persistence = { path = "../persistence" }
patricia-trie = "0.3.0"
hashbrown = { git = "https://github.com/octavonce/hashbrown", features = ["serde"] }
num-traits = "0.2.11"
log = "0.4.0"

[dev-dependencies]
test-helpers = { path = "../util/test-helpers" }
criterion = "0.2.1"

[[bench]]
name = "vm_benchmark"
path = "bench/vm_bench.rs"
harness = false