[package]
name = "transactions"
version = "0.1.0"
edition = "2018"
authors = []
publish = false

[dependencies]
serde = "1.0.59"
serde_derive = "1.0.59"
byteorder = "1.2.7"
unwrap = "1.2.0"
hex = "0.3.2"
rlp = "0.3.0"
hashdb = "0.3.0"
patricia-trie = "0.3.0"
elastic-array = "0.10.0"
rand = "0.6.0"
rocksdb = "0.13.0"
persistence = { path = "../persistence" }
crypto = { path = "../crypto" }
account = { path = "../account" }
quickcheck = "0.7.2"
rust_decimal = "0.9.0"
purple_vm = { path = "../purple_vm" }
bin-tools = { path = "../util/bin-tools/" }
bitvec = "0.9.0"

[dev-dependencies]
tempfile = "3.0.5"
test-helpers = { path = "../util/test-helpers" }