[package]
name = "transactions"
version = "0.1.0"
edition = "2018"
authors = []
publish = false

[dependencies]
serde = "1.0.104"
serde_derive = "1.0.104"
byteorder = "1.2.7"
unwrap = "1.2.0"
hex = "0.3.2"
rlp = "0.3.0"
hashdb = "0.3.0"
patricia-trie = "0.3.0"
lazy_static = "1.4.0"
elastic-array = "0.10.0"
rand = "0.6.0"
rocksdb = "0.13.0"
persistence = { path = "../persistence" }
constants = { path = "../constants" }
crypto = { path = "../crypto" }
account = { path = "../account" }
quickcheck = "0.7.2"
rust_decimal = "0.9.0"
purple_vm = { path = "../purple_vm" }
bin-tools = { path = "../util/bin-tools/" }
bitvec = "0.9.0"
triomphe = { git = "https://github.com/octavonce/triomphe" }

[dev-dependencies]
tempfile = "3.0.5"
test-helpers = { path = "../util/test-helpers" }
criterion = "0.2.1"
rocksdb = "0.13.0"

[dev-dependencies.miner]
features = ["test"]
path = "../miner" 

[dev-dependencies.transactions]
features = ["test"]
path = "../transactions" 

[dev-dependencies.chain]
features = ["test"]
path = "../chain"

[features]
test = []